# c-code-samples

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: test-all.yml
cmake/: CompilerFlags.cmake  Sanitizers.cmake
lab1/: lab1_1.c  lab1_2.c
src/canvas/: ascii_canvas.c
src/dlist/: dlist.c  dlist.h  test_dlist.c
src/extra/test1/: test1.c
src/fizzbuzz/: fizzbuzz_bitmask_switch.c  fizzbuzz_counters.c  fizzbuzz_naive.c  fizzbuzz_naive_vars.c  fizzbuzz_two_branches.c  fizzbuzz_with_flag.c
src/lab1/: lab1_1.c  lab1_2.c
src/lab2/: lab2_2.c
src/lab3/: lab3_2.c
src/lab4/: lab4_2.c
src/search/: binary_search.c  binary_search.h  linear_search.c  linear_search.h  search_common.h  test_array_search.c
src/slist/: slist.c  slist.h  test_slist.c
src/stack_machine/: stack.c  stack.h  stack_machine.c  stack_machine.h  test_stack_machine.c
src/strview/: strview.c  strview.h  test_strview.c
src/swap_vars/: swap_b.c  swap_c.c
src/variadic_fold/: variadic_fold.c
swap_vars/: swap_a.c  swap_b.c  swap_c.c
test/: CMakeLists.txt  RedirectInputs.cmake
test/data/: lab1_1_stdin.txt  lab2_2_stdin.txt  lab3_2_stdin.txt  lab4_2_stdin.txt  variadic_fold_stdin.txt
